# mongodb-type-assist

./: .gitignore  Cargo.toml  README.md  example-config.json
src/: main.rs  process.rs  types.rs
src/types/: mod.rs  structure.rs  typescript.rs
