[package]
name = "mongodb-type-assist"
version = "0.1.0"
edition = "2021"

[dependencies]
bson = "2.7.0"
clap = { version = "4.4.6", features = ["derive"] }
mongodb = { version = "2.7.0", default-features = false, features = ["tracing-unstable", "sync"] }
rayon = "1.8.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
